# jax_center_loss

./: .pre-commit-config.yaml  Makefile  README.md  center_loss.ipynb  center_loss_nb.ipynb  no_center_loss_nb.ipynb  pyproject.toml
images/: readme.md
jax_center_loss/: data.py
