[tool.poetry]
name = "jax_center_loss"
version = "0.1.0"
description = ""
authors = ["MikeOMa <michael.omalley1011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4"
flax = "^0.8"
keras = "^3.5"
optax = "^0.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
